# iw1x-radiant

./: .gitignore  .gitmodules  README.md  meson.build  wine-cross.txt
assets/: codradiant.kra  codradiant2.kra  codradiant3.kra  codradiant4.kra  codradiant5.kra
src/radiant/: address_adjuster.h  iw1x_core.cpp  iw1x_core.h  main.cpp  meson.build  pch.cpp  pch.h  resource.h  shared.h
src/radiant/components/: scheduler.cpp  scheduler.h
src/radiant/iw1x_plugins/: discord.cpp  discord.h
src/radiant/loader/: component_interface.h  component_loader.cpp  component_loader.h
src/radiant/stock/: constants.h  functions.cpp  functions.h  types.h  variables.cpp  variables.h
